<resources>
    <string name="app_name">HappyEHealthy</string>
    <string name="add_habit">Add Habit</string>
    <string name="track_goals">Track Goals</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_habit">Enter Habit</string>
    <string name="logout">Logout</string>
    <string name="hi_user_good_morning">Hi User, Good Morning!</string>
    <string name="date_and_time">Date and Time</string>
    <string name="steps">Steps</string>
    <string name="step_counter_sensor_not_available_on_this_device">Step counter sensor not available on this device</string>
</resources>