<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".CreateGoalsActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/editTextName"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/editTextHabit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_habit"
            android:padding="16dp"/>

        <Spinner
            android:id="@+id/spinnerFrequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:entries="@array/frequencies"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonAddHabit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/parentLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/add_habit"/>

    <Button
        android:id="@+id/buttonTrackGoals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAddHabit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/track_goals"/>

</RelativeLayout>
